$Id$

2010-12-22 Roy Hills <Roy.Hills@nta-monitor.com>

	* hash.c, hash.h, obstack.c, obstack.h: Updated version of GAS hash
	  table code to the latest version from GNU binutils 2.21.  This new
	  version addresses the shadowed variable warnings that the old version
	  used to produce when compiled with -Wshadow.

	* configure.ac: define ATTRIBUTE_UNUSED macro to enable portable use
	  of attribute unused to mark possibly unused function arguments.

	* arp-scan.c: Minor changes to remove a couple of shadowed variable
	  warnings.

2010-12-07 Roy Hills <Roy.Hills@nta-monitor.com>

	* acinclude.m4: Added GCC_WEXTRA macro to determine if the C compiler
	  supports the -Wextra switch to enable extra warnings.

	* arp-scan.c, arp-scan.h, utils.c: Remove unused function parameters
	  and address signed/unsigned comparisons highlighted by -Wextra.

2010-12-03 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.1: Added warning about setting ar$spa to the destination
	  IP address. Suggested by Ed Schaller.

2010-04-25 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-fingerprint: Added 2.11BSD

2009-08-15 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c, utils.c: Improve handling of --bandwidth and
	  --interval options: Allow either upper or lowercase
	  multiplier letters and give an error if an unknown multiplier
	  character is used.  Previously an unknown multiplier character
	  or one with the wrong case was silently ignored and treated as
	  no multiplier at all.

	* wrappers.c: Change Strtoul and Strtol so they give an error
	  if the underlying function finishes at an unconvertable
	  character other than NULL or whitespace.

	* configure.ac: Added extra warning "-Wwrite-strings" for gcc.

2009-08-14 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c, arp-scan.h, configure.ac, error.c: Rempved syslog
	  functionality as this is not used and has been #ifdef'ed out
	  for some time.

2009-05-06 Roy Hills <Roy.Hills@nta-monitor.com>
